structmeta-tests/tests/compile_fail/struct_meta/option_hash_map.rs
use std::collections::HashMap;
use syn::LitInt;

#[derive(structmeta::StructMeta)]
struct Example {
    rest: Option<HashMap<String, LitInt>>,
}

fn main() {}
