structmeta-tests/tests/compile_fail/struct_meta/option_hash_map.stderr
error[E0277]: the trait bound `HashMap<String, LitInt>: Parse` is not satisfied
   --> tests/compile_fail/struct_meta/option_hash_map.rs:6:5
    |
6   |     rest: Option<HashMap<String, LitInt>>,
    |     ^^^^ the trait `Parse` is not implemented for `HashMap<String, LitInt>`
    |
    = help: the following other types implement trait `Parse`:
              Abi
              Abstract
              AndAnd
              AndEq
              AngleBracketedGenericArguments
              Arm
              As
              At
            and 251 others
note: required by a bound in `ParseBuffer::<'a>::parse`
   --> $CARGO/syn-1.0.99/src/parse.rs
    |
    |     pub fn parse<T: Parse>(&self) -> Result<T> {
    |                     ^^^^^ required by this bound in `ParseBuffer::<'a>::parse`
